Linked Slides pdf files to adamkoranyibirthday

--- a/adamkoranyibirthday/titles.html
+++ b/adamkoranyibirthday/titles.html
@@ -18,7 +18,7 @@ css: "ak-fest"
             <div>
             <div class="pt-3 border-bottom border-secondary" id="faraut">
                 <h5><strong>Speaker:</strong> Jacques Faraut, Institut de Mathématiques de Jussieu - Paris Rive Gauche   </h5>
-                <h5><strong>Title:</strong> Adam Koranyi, Mathematician</h5>
+                <h5><strong>Title:</strong> <a href="http://math.iisc.ac.in/adamkoranyibirthday/Adam_Koranyi_Mathematician.pdf" target="_blank">Adam Koranyi, Mathematician</a></h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">19:00 &ndash; 19:50</a> </h5>
                 <p>
                     <strong>Abstract:</strong> I intend to comment on some of the mathematical achievements of Adam Koranyi. </p>
@@ -26,7 +26,7 @@ css: "ak-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="upmeier">
                 <h5><strong>Speaker:</strong> Harald Upmeier, University of Marburg, Germany</h5>
-                <h5><strong>Title:</strong> The Impact of Adam Korányi’s Work on Jordan Theory </h5>
+                <h5><strong>Title:</strong> <a href="http://math.iisc.ac.in/adamkoranyibirthday/The_Impact_of_Adam_Korányi_Work_on_Jordan_Theory.pdf" target="_blank">The Impact of Adam Korányi’s Work on Jordan Theory </a> </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">19:55 &ndash; 20:45</a> </h5>
                 <p>
                     <strong>Abstract:</strong>  We highlight some major contributions of Adam Korányi related to Jordan algebras and Jordan triples.
@@ -45,7 +45,7 @@ css: "ak-fest"
     <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="narayanan">
                 <h5><strong>Speaker:</strong> E. K. Narayanan, Indian Institute of Science, Bangalore</h5>
-                <h5><strong>Title:</strong> Koranyi and the classification of homogenous operators in the Cowen-Douglas class on the unit disc </h5>
+                <h5><strong>Title:</strong> <a href="http://math.iisc.ac.in/adamkoranyibirthday/Koranyi_and_the_classification_of_homogenous_operators.pdf" target="_blank"> Koranyi and the classification of homogenous operators in the Cowen-Douglas class on the unit disc </a></h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">20:50 &ndash; 21:40</a> </h5>
                 <p>
                     <strong>Abstract:</strong>We shall describe the Koranyi-Misra classification of homogenous operators in the Cowen-Douglas class on the unit disc.
