--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -53,7 +53,7 @@ css: "mkg-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:10 am</td>
                             <td>Gopal Basak (ISI, Kolkatta) </td>
-			    <td><a href="titles.html#basak">to be announced</a></td>
+			    <td><a href="titles.html#basak"> How likely it is to reach a target of GDP in 5 years time?</a></td>
                         </tr>
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
