--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -18,10 +18,10 @@ css: "mkg-fest"
             <div>
             <div class="pt-3 border-bottom border-secondary" id="basak">
                 <h5><strong>Speaker:</strong> Gopal Basak</h5>
-                <h5><strong>Title:</strong> </h5>
+                <h5><strong>Title:</strong> How likely it is to reach a target of GDP in 5 years time?</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:10 am</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> In economic theory, the improvement of a country’s economy translates to achieving target value of a certain variable. Among these targets of current times, one is growth of Gross Domestic Product (GDP). The attainability of such targets calls for formulation of economic model which would explain the influence of policy variables (set by Central Bank and the Govt) on the target variable. Beside such target attainment goals, economists are also faced with the challenge to choose policy variables to stabilise economy. Typical policy regulation problems include how and when should the central bank change the credit rates, and whether the government expenditure should increase or decrease. A linear econometric model is developed to study the trajectory of state variables under control of policy variable.  Influence of the values of policy variables is studied towards reaching the goal of target achievement. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kumar">
