lectures marked online

--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -64,12 +64,12 @@ css: "mkg-fest"
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
                         </tr>
                         <tr>
-                            <td>11:20 am &ndash; 12:00 pm </td>
+                            <td>11:20 am &ndash; 12:00 pm (online)</td>
                             <td>Vivek Borkar (IIT-B)</td>
 			    <td><a href="titles.html#borkar">In search of Markov solutions</a></td>
 			</tr>
                         <tr>
-                            <td>12:00 pm &ndash; 12:40 pm</td>
+                            <td>12:00 pm &ndash; 12:40 pm (online)</td>
                             <td>Anup Biswas (IISER Pune)</td>
 			    <td><a href="titles.html#anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a></td>
                         </tr>
