--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -65,7 +65,7 @@ css: "thangavelu-fest"
 			    <td><a href="titles.html#pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
                         </tr>
                         <tr>
-                            <td>12:00 pm &ndash; 1:00 pm</td>
+                            <td>12:00 pm &ndash; 1:00 pm (online)</td>
                             <td>Bernhard Krotz (University of Paderborn, Germany)</td>
 			    <td><a href="titles.html#krotz"> A Paley-Wiener theorem for Harish-Chandra modules</a></td>
                         </tr>
