Added zhuang poster link

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1531,7 +1531,7 @@
                     </div>
                     <div class="row">
                        <div class="col-lg-6">
-<p style="text-align: center;"> Refined consecutive pattern enumeration via a generalized cluster method<br> <span  style="color:white;"> 	Yan Zhuang*</span></p>
+<p style="text-align: center;"> <a href="assets/posters/zhuang.pdf">Refined consecutive pattern enumeration via a generalized cluster method</a><br> <span  style="color:white;"> 	Yan Zhuang*</span></p>
 <p style="text-align: center;"> Mockingbird lattices<br> <span  style="color:white;"> 	Samuele Giraudo*</span></p>
 <p style="text-align: center;"> Continuously Increasing Subsequences of Random Multiset Permutations<br> <span  style="color:white;"> 	Alexander Clifton, Bishal Deb*, Yifeng Huang, Sam Spiro and Semin Yoo</span></p>
 <p style="text-align: center;"> Row-strict dual immaculate functions and 0-Hecke modules<br> <span  style="color:white;"> 	Elizabeth Niese, Sheila Sundaram*, 
