Added all other poster pdf links

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1532,67 +1532,67 @@
                     <div class="row">
                        <div class="col-lg-6">
 <p style="text-align: center;"> <a href="assets/posters/zhuang.pdf">Refined consecutive pattern enumeration via a generalized cluster method</a><br> <span  style="color:white;"> 	Yan Zhuang*</span></p>
-<p style="text-align: center;"> Mockingbird lattices<br> <span  style="color:white;"> 	Samuele Giraudo*</span></p>
-<p style="text-align: center;"> Continuously Increasing Subsequences of Random Multiset Permutations<br> <span  style="color:white;"> 	Alexander Clifton, Bishal Deb*, Yifeng Huang, Sam Spiro and Semin Yoo</span></p>
-<p style="text-align: center;"> Row-strict dual immaculate functions and 0-Hecke modules<br> <span  style="color:white;"> 	Elizabeth Niese, Sheila Sundaram*, 
+<p style="text-align: center;"> <a href="assets/posters/giraudo.pdf">Mockingbird lattices</a><br> <span  style="color:white;"> 	Samuele Giraudo*</span></p>
+<p style="text-align: center;"> <a href="assets/posters/deb.pdf">Continuously Increasing Subsequences of Random Multiset Permutations</a><br> <span  style="color:white;"> 	Alexander Clifton, Bishal Deb*, Yifeng Huang, Sam Spiro and Semin Yoo</span></p>
+<p style="text-align: center;"> <a href="assets/posters/sundaram.pdf">Row-strict dual immaculate functions and 0-Hecke modules</a><br> <span  style="color:white;"> 	Elizabeth Niese, Sheila Sundaram*, 
 	Stephanie van Willigenburg, Julianne Vega and Shiyun Wang</span></p>
 <p style="text-align: center;"> 	Homomorphism complexes, reconfiguration, and homotopy for directed graphs<br> <span  style="color:white;"> 	Anton Dochtermann and Anurag Singh*</span></p>
-<p style="text-align: center;"> 	Walks in simplices, cylindric tableaux, and asymmetric exclusion processes<br> <span  style="color:white;"> 	Sergi Elizalde*</span></p>
-<p style="text-align: center;"> 	Stable sets in flag spheres<br> <span  style="color:white;"> 	Maria Chudnovsky and Eran Nevo*</span></p>
-<p style="text-align: center;"> 	An involution on derangements preserving excedances and right-to-left minima<br> <span  style="color:white;"> 	Per Wilhelm Alexandersson and Frether Getachew Kebede*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/elizalde.pdf">Walks in simplices, cylindric tableaux, and asymmetric exclusion processes</a><br> <span  style="color:white;"> 	Sergi Elizalde*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/nevo.pdf">Stable sets in flag spheres</a><br> <span  style="color:white;"> 	Maria Chudnovsky and Eran Nevo*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/kebede.pdf">An involution on derangements preserving excedances and right-to-left minima</a><br> <span  style="color:white;"> 	Per Wilhelm Alexandersson and Frether Getachew Kebede*</span></p>
 <p style="text-align: center;"> 	Peaks are Preserved under Run-Sorting<br> <span  style="color:white;"> 	Per Alexandersson and Olivia Nabawanda*</span></p>
-<p style="text-align: center;"> 	Troupes, Cumulants, and Stack-Sorting<br> <span  style="color:white;"> 	Colin Defant*</span></p>
-<p style="text-align: center;"> 	Equidistributions around special kinds of descents and excedances via continued fractions<br> <span  style="color:white;"> 	Bin Han*, Jianxi Mao and Jiang Zeng</span></p>
-<p style="text-align: center;"> 	Combinatorics of Newell-Littlewood numbers<br> <span  style="color:white;"> 	Shiliang Gao, Gidon Orelowitz*, Nicolas Ressayre and Alexander Yong</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/defant.pdf">Troupes, Cumulants, and Stack-Sorting</a><br> <span  style="color:white;"> 	Colin Defant*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/han.pdf">Equidistributions around special kinds of descents and excedances via continued fractions</a><br> <span  style="color:white;"> 	Bin Han*, Jianxi Mao and Jiang Zeng</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/gao.pdf">Combinatorics of Newell-Littlewood numbers</a><br> <span  style="color:white;"> 	Shiliang Gao, Gidon Orelowitz*, Nicolas Ressayre and Alexander Yong</span></p>
 <p style="text-align: center;"> 	Wronskians, total positivity, and real Schubert calculus<br> <span  style="color:white;"> 	Steven Karp*</span></p>
 <p style="text-align: center;"> 	Parity biases in partitions and restricted partitions<br> <span  style="color:white;"> 	Koustav Banerjee, Sreerupa Bhatttacharjee, Manosij Ghosh Dastidar, Pankaj Jyoti Mahanta* and Manjil Saikia</span></p>
 <p style="text-align: center;"> 	Set partitions, fermions, and skein relations<br> <span  style="color:white;"> 	Jesse Kim* and Brendon Rhoades</span></p>
-<p style="text-align: center;"> 	A statistic for regions of braid deformations<br> <span  style="color:white;"> 	Priyavrat Deshpande* and Krishna Menon</span></p>
-<p style="text-align: center;"> 	Weighted Ehrhart series and a type-$\mathsf{B}$ analogue of a formula of MacMahon<br> <span  style="color:white;"> 	Elena Tielker*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/deshpande.pdf">A statistic for regions of braid deformations</a><br> <span  style="color:white;"> 	Priyavrat Deshpande* and Krishna Menon</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/tielker.pdf">Weighted Ehrhart series and a type-$\mathsf{B}$ analogue of a formula of MacMahon</a><br> <span  style="color:white;"> 	Elena Tielker*</span></p>
 <p style="text-align: center;"> 	Flag Hilbert--Poincar\'e series and Igusa zeta functions of hyperplane arrangements<br> <span  style="color:white;"> 	Joshua Maglione* and Christopher Voll</span></p>
 <p style="text-align: center;"> 	Inequality of a class of near-ribbon skew Schur Q functions<br> <span  style="color:white;"> 	Maria Gillespie and Kyle Salois*</span></p>
 <p style="text-align: center;"> 	Classifying Levi-spherical Schubert varieties<br> <span  style="color:white;"> 	Yibo Gao, Reuven Hodges* and Alexander Yong</span></p>
 <p style="text-align: center;"> 	Asymptotics of coefficients of algebraic series via embedding into rational series (extended abstract)<br> <span  style="color:white;"> 	Torin Greenwood*, Stephen Melczer, Tiadora Ruza and Mark C. Wilson</span></p>
-<p style="text-align: center;"> 	Friezes for a Pair of Pants<br> <span  style="color:white;"> 	Ilke Canakci, Anna Felikson, Ana Garcia Elsener* and Pavel Tumarkin</span></p>
-<p style="text-align: center;"> 	Affine semigroups of maximal projective dimension<br> <span  style="color:white;"> 	Om Prakash Bhardwaj*, Kriti Goel and Indranath Sengupta</span></p>
-<p style="text-align: center;"> 	A combinatorial model for the transition matrix between the Specht and web bases<br> <span  style="color:white;"> 	Jihyeug Jang*, Byung-Hak Hwang and Jaeseong Oh</span></p>
-<p style="text-align: center;"> 	Set Partitions, Tableaux, and Subspace Profiles of Regular Diagonal Operators<br> <span  style="color:white;"> 	Amritanshu Prasad and Samrith Ram*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/elsener.pdf">Friezes for a Pair of Pants</a><br> <span  style="color:white;"> 	Ilke Canakci, Anna Felikson, Ana Garcia Elsener* and Pavel Tumarkin</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/bhardwaj.pdf">Affine semigroups of maximal projective dimension</a><br> <span  style="color:white;"> 	Om Prakash Bhardwaj*, Kriti Goel and Indranath Sengupta</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/jang.pdf">A combinatorial model for the transition matrix between the Specht and web bases</a><br> <span  style="color:white;"> 	Jihyeug Jang*, Byung-Hak Hwang and Jaeseong Oh</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/ram.pdf">Set Partitions, Tableaux, and Subspace Profiles of Regular Diagonal Operators</a><br> <span  style="color:white;"> 	Amritanshu Prasad and Samrith Ram*</span></p>
 <p style="text-align: center;"> 	$0$-Hecke-Clifford modules from diagrams<br> <span  style="color:white;"> 	Dominic Searles*</span></p>
-<p style="text-align: center;"> 	Factorization of classical characters twisted by roots of unity: extended abstract<br> <span  style="color:white;"> 	Arvind Ayyer and Nishu Kumari*</span></p>
-<p style="text-align: center;"> 	Rowmotion on fences<br> <span  style="color:white;"> 	Sergi Elizalde, Matthew Plante, Tom Roby* and Bruce Sagan</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/kumari.pdf">Factorization of classical characters twisted by roots of unity: extended abstract</a><br> <span  style="color:white;"> 	Arvind Ayyer and Nishu Kumari*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/plante.pdf">Rowmotion on fences</a><br> <span  style="color:white;"> 	Sergi Elizalde, Matthew Plante, Tom Roby* and Bruce Sagan</span></p>
 <p style="text-align: center;"> 	Positive Tropical Flags and the Positive Tropical Dressian<br> <span  style="color:white;"> 	Jonathan Boretsky*</span></p>
                         </div>
                         <div class="col-lg-6">       
-<p style="text-align: center;"> 	Planar Tanglegram Layouts and Single Edge Insertion<br> <span  style="color:white;"> 	Kevin Liu*</span></p>
-<p style="text-align: center;"> 	Grothendieck-to-Lascoux expansions<br> <span  style="color:white;"> 	Tianyi Yu* and Mark Shimozono</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/liu.pdf">Planar Tanglegram Layouts and Single Edge Insertion</a><br> <span  style="color:white;"> 	Kevin Liu*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/yu.pdf">Grothendieck-to-Lascoux expansions</a><br> <span  style="color:white;"> 	Tianyi Yu* and Mark Shimozono</span></p>
 <p style="text-align: center;"> 	Castelnuovo-Mumford Regularity of Matrix Schubert Varieties<br> <span  style="color:white;"> 	Oliver Pechenik, David E. Speyer and Anna Weigandt*</span></p>
-<p style="text-align: center;"> 	New companions to Gordon identities from commutative algebra<br> <span  style="color:white;"> 	Pooneh Afsharijoo*, Jehanne Dousse, Frédéric Jouhet and Hussein Mourtada</span></p>
-<p style="text-align: center;"> 	A description of the minimal elements of Shi regions in classical Weyl Groups<br> <span  style="color:white;"> 	Balthazar Charles*</span></p>
-<p style="text-align: center;"> 	Rooted Clusters for Graph LP Algebras<br> <span  style="color:white;"> 	Esther Banaian, Sunita Chepuri, Elizabeth Kelley* and Sylvester W. Zhang</span></p>
-<p style="text-align: center;"> 	Subdivisions of generalized permutahedra<br> <span  style="color:white;"> 	Jorge Olarte*, Michael Joswig, Georg Loho and Dante Luber</span></p>
-<p style="text-align: center;"> 	Horizontal-strip LLT polynomials<br> <span  style="color:white;"> 	Foster Tom*</span></p>
-<p style="text-align: center;"> 	Chromatic Quasisymmetric Class Functions of linearized combinatorial Hopf monoids<br> <span  style="color:white;"> 	Jacob White*</span></p>
-<p style="text-align: center;"> 	Harmonic Polynomials on Perfect Matchings<br> <span  style="color:white;"> 	Yuval Filmus and Nathan Lindzey*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/afsharijoo.pdf">New companions to Gordon identities from commutative algebra</a><br> <span  style="color:white;"> 	Pooneh Afsharijoo*, Jehanne Dousse, Frédéric Jouhet and Hussein Mourtada</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/charles.pdf">A description of the minimal elements of Shi regions in classical Weyl Groups</a><br> <span  style="color:white;"> 	Balthazar Charles*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/kelley.pdf">Rooted Clusters for Graph LP Algebras</a><br> <span  style="color:white;"> 	Esther Banaian, Sunita Chepuri, Elizabeth Kelley* and Sylvester W. Zhang</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/olarte.pdf">Subdivisions of generalized permutahedra</a><br> <span  style="color:white;"> 	Jorge Olarte*, Michael Joswig, Georg Loho and Dante Luber</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/foster.pdf">Horizontal-strip LLT polynomials</a><br> <span  style="color:white;"> 	Foster Tom*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/white.pdf">Chromatic Quasisymmetric Class Functions of linearized combinatorial Hopf monoids</a><br> <span  style="color:white;"> 	Jacob White*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/lindzey.pdf">Harmonic Polynomials on Perfect Matchings</a><br> <span  style="color:white;"> 	Yuval Filmus and Nathan Lindzey*</span></p>
 <p style="text-align: center;"> 	Crystals and integrable systems for edge labeled tableaux<br> <span  style="color:white;"> 	Ajeeth Gunna* and Travis Scrimshaw</span></p>
-<p style="text-align: center;">  	Parabolic Tamari Lattices in Linear Type B<br> <span  style="color:white;"> 	Wenjie Fang, Henri Mühle* and Jean-Christophe Novelli</span></p>
-<p style="text-align: center;">  	Shuffle Lattices and Bubble Lattices<br> <span  style="color:white;"> 	Thomas McConville* and Henri Mühle</span></p>
-<p style="text-align: center;">  	Multiplication theorems for self-conjugate partitions<br> <span  style="color:white;"> 	David Wahiche*</span></p>
-<p style="text-align: center;">  	The monopole-dimer model for Cartesian products of graphs: extended abstract<br> <span  style="color:white;"> 	Anita Arora* and Arvind Ayyer</span></p>
-<p style="text-align: center;">  	Weak faces and a formula for weights of highest weight modules, via parabolic partial sum property for roots<br> <span  style="color:white;"> 	G Krishna Teja*</span></p>
-<p style="text-align: center;">  	Acyclic reorientation lattices and their lattice quotients<br> <span  style="color:white;"> 	Vincent Pilaud*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/muhle.pdf">Parabolic Tamari Lattices in Linear Type B</a><br> <span  style="color:white;"> 	Wenjie Fang, Henri Mühle* and Jean-Christophe Novelli</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/mcconville.pdf">Shuffle Lattices and Bubble Lattices</a><br> <span  style="color:white;"> 	Thomas McConville* and Henri Mühle</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/wahiche.pdf">Multiplication theorems for self-conjugate partitions</a><br> <span  style="color:white;"> 	David Wahiche*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/arora.pdf">The monopole-dimer model for Cartesian products of graphs: extended abstract</a><br> <span  style="color:white;"> 	Anita Arora* and Arvind Ayyer</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/teja.pdf">Weak faces and a formula for weights of highest weight modules, via parabolic partial sum property for roots</a><br> <span  style="color:white;"> 	G Krishna Teja*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/pilaud.pdf">Acyclic reorientation lattices and their lattice quotients</a><br> <span  style="color:white;"> 	Vincent Pilaud*</span></p>
 <p style="text-align: center;">  	On the geometry of flag Hilbert--Poincar\'e series for matroids<br> <span  style="color:white;"> 	Lukas Kühne* and Joshua Maglione</span></p>
-<p style="text-align: center;">  	Highest weight crystals for Schur Q-functions<br> <span  style="color:white;"> 	Eric Marberg and Kam Hung Tong*</span></p>
-<p style="text-align: center;">  	The elliptic Hall algebra element $\mathbf{Q}_{m, n}^{k} (1)$<br> <span  style="color:white;"> 	Andy Wilson*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/tong.pdf">Highest weight crystals for Schur Q-functions</a><br> <span  style="color:white;"> 	Eric Marberg and Kam Hung Tong*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/wilson.pdf">The elliptic Hall algebra element $\mathbf{Q}_{m, n}^{k} (1)$</a><br> <span  style="color:white;"> 	Andy Wilson*</span></p>
 <p style="text-align: center;">  	Cluster Duality for Lagrangian and Orthogonal Grassmannians<br> <span  style="color:white;"> 	Charles Wang*</span></p>
-<p style="text-align: center;">  	Deformation cones of hypergraphic polytopes<br> <span  style="color:white;"> 	Arnau Padrol, Vincent Pilaud and Germain Poullot*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/poullot.pdf">Deformation cones of hypergraphic polytopes</a><br> <span  style="color:white;"> 	Arnau Padrol, Vincent Pilaud and Germain Poullot*</span></p>
 <p style="text-align: center;">  	Cyclic Actions in Parking Spaces<br> <span  style="color:white;"> 	Eric Nathan Stucky*</span></p>
-<p style="text-align: center;">  	Lattice paths and negatively indexed weight-dependent binomial coefficients<br> <span  style="color:white;"> 	Josef Küstner, Michael Schlosser* and Meesue Yoo</span></p>
-<p style="text-align: center;">  	A q-deformation of enriched P-partitions<br> <span  style="color:white;"> 	Darij Grinberg* and Ekaterina Vassilieva</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/schlosser.pdf">Lattice paths and negatively indexed weight-dependent binomial coefficients</a><br> <span  style="color:white;"> 	Josef Küstner, Michael Schlosser* and Meesue Yoo</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/grinberg.pdf">A q-deformation of enriched P-partitions</a><br> <span  style="color:white;"> 	Darij Grinberg* and Ekaterina Vassilieva</span></p>
 <p style="text-align: center;">  	Growth of unbounded sets in nilpotent groups and random mapping statistics<br> <span  style="color:white;"> 	Beeri Greenfeld and Hagai Lavner*</span></p>
-<p style="text-align: center;">  	Derangements and the p-adic incomplete gamma function<br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/richman.pdf">Derangements and the p-adic incomplete gamma function</a><br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman*</span></p>
 <p style="text-align: center;">  	Product-Coproduct Prographs and Triangulations of the Sphere<br> <span  style="color:white;"> 	Nicolas Borie* and Justine Falque</span></p>
-<p style="text-align: center;">  	Combinatorics of fighting fish, planar maps and Tamari intervals<br> <span  style="color:white;"> 	Corentin Henriet* and Enrica Duchi</span></p>
-<p style="text-align: center;">  	Torsors from toggling independent sets<br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough*</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/henriet.pdf">Combinatorics of fighting fish, planar maps and Tamari intervals</a><br> <span  style="color:white;"> 	Corentin Henriet* and Enrica Duchi</span></p>
+<p style="text-align: center;">  	<a href="assets/posters/mcdonough.pdf">Torsors from toggling independent sets</a><br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough*</span></p>
 
                         </div>
                     </div>
