--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -52,7 +52,7 @@ css: "mkg-fest"
                     <tbody>
                         <tr>
                             <td>09:30 am &ndash; 10:10 am</td>
-                            <td>Gopal Basak (ISI, Kolkatta) </td>
+                            <td>Gopal Basak (ISI Kolkata) </td>
 			    <td><a href="titles.html#basak"> How likely it is to reach a target of GDP in 5 years time?</a></td>
                         </tr>
                         <tr>
@@ -65,7 +65,7 @@ css: "mkg-fest"
                         </tr>
                         <tr>
                             <td>11:20 am &ndash; 12:00 pm (online)</td>
-                            <td>Vivek Borkar (IIT-B)</td>
+                            <td>Vivek Borkar (IIT Bombay)</td>
 			    <td><a href="titles.html#borkar">In search of Markov solutions</a></td>
 			</tr>
                         <tr>
