--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -53,7 +53,8 @@ css: "mkg-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:10 am</td>
                             <td>Gopal Basak (ISI Kolkata) </td>
-			    <td><a href="titles.html#basak"> How likely it is to reach a target of GDP in 5 years time?</a></td>
+			    <td><a href="titles.html#basak"> How likely it is to reach a target of GDP in 5 years time?</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=586s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
