--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -59,7 +59,9 @@ css: "mkg-fest"
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
                             <td>Suresh Kumar</td>
-			    <td><a href="titles.html#kumar"> Non zero sum risk sensitive stochastic differential games</a></td>
+			    <td><a href="titles.html#kumar"> Non zero sum risk sensitive stochastic differential games</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</td>
+                        </tr>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
