--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -58,7 +58,7 @@ css: "mkg-fest"
                         </tr>
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
-                            <td>Suresh Kumar</td>
+                            <td>K. Suresh Kumar (IIT Bombay)</td>
 			    <td><a href="titles.html#kumar"> Non zero sum risk sensitive stochastic differential games</a>
 				&nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</td>
                         </tr>
