--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -62,19 +62,20 @@ css: "mkg-fest"
 			    <td><a href="titles.html#kumar"> Non zero sum risk sensitive stochastic differential games</a>
 				&nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</td>
                         </tr>
-                        </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
                         </tr>
                         <tr>
                             <td>11:20 am &ndash; 12:00 pm (online)</td>
                             <td>Vivek Borkar (IIT Bombay)</td>
-			    <td><a href="titles.html#borkar">In search of Markov solutions</a></td>
+			    <td><a href="titles.html#borkar">In search of Markov solutions</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=e6C4IhmT0kA&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=0s" target="_blank">Video</a>]</td>
 			</tr>
                         <tr>
                             <td>12:00 pm &ndash; 12:40 pm (online)</td>
                             <td>Anup Biswas (IISER Pune)</td>
-			    <td><a href="titles.html#anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a></td>
+			    <td><a href="titles.html#anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=e6C4IhmT0kA&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=1887s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
