--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -83,7 +83,8 @@ css: "mkg-fest"
                         <tr>
                             <td>2:10 pm &ndash; 2:50 pm</td>
                             <td>B. Rajeev (ISI Bangalore)</td>
-			    <td><a href="titles.html#rajeev"> Stochastic Models for Barrier Crossing and Fluctuations in Local Time Scale. Rajeev Bhaskaran and Vijay Ganesh Sadhasivam.</a></td>
+			    <td><a href="titles.html#rajeev"> Stochastic Models for Barrier Crossing and Fluctuations in Local Time Scale. Rajeev Bhaskaran and Vijay Ganesh Sadhasivam.</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=XM3ExvTUW0Y&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=0s" target="_blank">Video</a>]</td>
                         </tr>
 			<tr>
                             <td>2:50 pm &ndash; 3:30 pm</td>
