--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -89,7 +89,8 @@ css: "mkg-fest"
 			<tr>
                             <td>2:50 pm &ndash; 3:30 pm</td>
                             <td>Imran Biswas (TIFR-CAM)</td>
-			    <td><a href="titles.html#imran"> Obstacle problem for stochastic conservation laws and Lewy-Stampaccia inequality</a></td>
+			    <td><a href="titles.html#imran"> Obstacle problem for stochastic conservation laws and Lewy-Stampaccia inequality</a>
+				&nbsp; [<a href="https://www.youtube.com/watch?v=XM3ExvTUW0Y&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=2823s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
