--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -17,7 +17,8 @@ css: "mkg-fest"
     </div>
             <div>
             <div class="pt-3 border-bottom border-secondary" id="basak">
-                <h5><strong>Speaker:</strong> Gopal Basak</h5>
+                <h5><strong>Speaker:</strong> Gopal Basak
+		    &nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=586s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> How likely it is to reach a target of GDP in 5 years time?</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:10 am</a> </h5>
                 <p>
