--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -26,7 +26,7 @@ css: "mkg-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kumar">
-                <h5><strong>Speaker:</strong> Suresh Kumar </h5>
+                <h5><strong>Speaker:</strong> Suresh Kumar &nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Non zero sum risk sensitive stochastic differential games </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:10 am &ndash; 10:50 am</a> </h5>
                 <p>
@@ -35,7 +35,7 @@ games with risk-sensitive ergodic cost criterion. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="borkar">
-                <h5><strong>Speaker:</strong> Vivek Borkar </h5>
+                <h5><strong>Speaker:</strong> Vivek Borkar &nbsp; [<a href="https://www.youtube.com/watch?v=e6C4IhmT0kA&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=0s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong>  In search of Markov solutions</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:20 am &ndash; 12:00 pm</a> </h5>
                 <p>
@@ -43,7 +43,7 @@ games with risk-sensitive ergodic cost criterion. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="anup">
-                <h5><strong>Speaker:</strong> Anup Biswas </h5>
+                <h5><strong>Speaker:</strong> Anup Biswas &nbsp; [<a href="https://www.youtube.com/watch?v=e6C4IhmT0kA&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=1887s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Existence-Uniqueness results for nonlinear integro-differential equations </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 12:40 pm</a> </h5>
                 <p>
@@ -52,7 +52,7 @@ HJB equation in Rd where the nonlocal term is comparable with the fractional Lap
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="rajeev">
-                <h5><strong>Speaker:</strong> B. Rajeev</h5>
+                <h5><strong>Speaker:</strong> B. Rajeev &nbsp; [<a href="https://www.youtube.com/watch?v=XM3ExvTUW0Y&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=0s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong>  Stochastic Models for Barrier Crossing and Fluctuations in Local Time Scale. Rajeev Bhaskaran and Vijay Ganesh Sadhasivam.</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:10 pm &ndash; 2:50 pm</a> </h5>
                 <p>
@@ -60,7 +60,7 @@ HJB equation in Rd where the nonlocal term is comparable with the fractional Lap
             </div>
 	    <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="imran">
-		    <h5><strong>Speaker:</strong> Imran Biswas</h5>
+		    <h5><strong>Speaker:</strong> Imran Biswas &nbsp; [<a href="https://www.youtube.com/watch?v=XM3ExvTUW0Y&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=2823s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Obstacle problem for stochastic conservation laws and Lewy-Stampaccia inequality </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:50 pm &ndash; 3:30 pm</a> </h5>
                 <p>
