--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -26,7 +26,7 @@ css: "mkg-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kumar">
-                <h5><strong>Speaker:</strong> Suresh Kumar &nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</h5>
+                <h5><strong>Speaker:</strong> K. Suresh Kumar &nbsp; [<a href="https://www.youtube.com/watch?v=DoJy8CASIyM&list=PLQXtaLhI1-1rXbZLLu-zCWPao6DQsIAIH&t=3410s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Non zero sum risk sensitive stochastic differential games </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:10 am &ndash; 10:50 am</a> </h5>
                 <p>
